--- a/public/stylesheets/layout/modules/post-boxes.css
+++ b/public/stylesheets/layout/modules/post-boxes.css
@@ -71,7 +71,7 @@
   max-width: 100%;
 }
 .voice-box > .voice-cont > h3 {
-  font-size: 18px;
+  font-size: 16px;
   line-height: 1.222em;
   margin: 7px 14px 0 14px;
   overflow:hidden;
@@ -138,7 +138,7 @@
 .voice-box > .voice-action {
   border-width: 1px 0 0 0;
   clear: both;
-  padding: 10px 13px 4px 11px;
+  padding: 10px 13px 7px 11px;
   position:relative;
   z-index:1;
 }
